<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.ZonesMapFragment">

    <TextView
        android:id="@+id/tv_suitableZones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suitable_zones"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll1"
        app:layout_constraintTop_toBottomOf="@id/tv_suitableZones" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@+id/ll2">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_weight=".5"
            android:backgroundTint="@color/button_state_colors"
            android:contentDescription="@string/back"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <ImageButton
            android:id="@+id/btn_Forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_weight=".5"
            android:backgroundTint="@color/button_state_colors"
            android:contentDescription="@string/forward"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        app:layout_constraintBottom_toTopOf="@+id/av_zonesMapFragmentBanner" >

        <Button
            android:id="@+id/btn_exportResults"
            android:layout_width="192dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/button_state_colors"
            android:text="@string/export_zones"
            android:textColor="@color/button_text_state_colors" />

        <Button
            android:id="@+id/btn_newSearch"
            android:layout_width="192dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_state_colors"
            android:text="@string/new_search"
            android:textColor="@color/button_text_state_colors" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/av_zonesMapFragmentBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5575310058998232/5854634701"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>