<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.SelectZoneOnMapFragment">

    <TextView
        android:id="@+id/tv_pickLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_location_on_map"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pickLocation" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@+id/av_mapsFragmentBanner" >

        <EditText
            android:id="@+id/et_enterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_address"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_currentLocation"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:backgroundTint="@color/button_state_colors"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/choose_my_location"
            android:textColor="@color/button_text_state_colors" />

        <Button
            android:id="@+id/btn_showSelectedZone"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_state_colors"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/show_selected_zone"
            android:textColor="@color/button_text_state_colors" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.gms.ads.AdView
        android:id="@+id/av_mapsFragmentBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5575310058998232/5854634701"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>